# StarClone

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  bootstrap  config.status  configure  configure.ac  libs  obj
bugs/: bugs
cmake/Modules/: FindSDL.cmake  FindSDL_mixer.cmake  FindStormLib.cmake  Findgrp.cmake  Findmpq.cmake  Findzlib.cmake
doc/: mage.inf  orders.txt  units.inf  units.txt  weapons.inf  weapons.txt
include/: Controller.h  CrossPlatform.h  DrawItem.h  Enumerate.h  Enumerator.h  LeaderBoard.h  List.h  LowMouse.h  MenuItem.h  ObjChecks.h  RefreshMap.h  RegenObjMap.h  ScreenDraw.h  action.h  actiondefault.h  audio.h  audiolowlevel.h  auxil.h  briefing.h  commandqueue.h  const.h  construct.h  creep.h  debug.h  defs.h  defsmodes.h  defsunits.h  dialogbin.h  diap.h  doodad.h  flexdefaults.h  flingy.h  fog.h  fonts.h  gamemenu.h  gener.h  gr.h  hod.h  images.h  iscript.h  (+51 more)
include/dos/: doscall.h  gr8dos.h  handlers.h  keydos.h  modes.h  mousedos.h
include/fb/: fbkey.h
include/libs/grplib/grplib/: font.h  gr8.h  grp.h  palette.h  usegrp.h
include/libs/mpqlib/mpqlib/: SCommon.h  Storm.h  StormLib.h  StormPort.h  pthreadPort.h
include/network/: netwgame.h  network_general.h  netwplay.h
include/sdl/: grsdl.h  keysdl.h  mousesdl.h
include/smacker/: smacker.h  smk_bitstream.h  smk_hufftree.h
include/video/fb/: fbkey.h
include/video/sdl/: keysdl.h  sdlkey.h
include/video/win/: winkey.h
include/video/xlib/: xlibkey.h
include/xlib/: xlibkey.h
neededlibs/: grplib-0.4.18-r1.ebuild  grplib-0.4.18.tar.bz2  grplib-0.4.19.ebuild  grplib-0.4.19.tar.bz2  grplib-0.4.20.ebuild  mpqlib-0.5.3-r2.ebuild  mpqlib-0.5.3b.tar.bz2
src/: DrawItem.cpp  LeaderBoard.cpp  List.cpp  MenuItem.cpp  ObjChecks.cpp  RefreshMap.cpp  RegenObjMap.cpp  ScreenDraw.cpp  action.cpp  actiondefault.cpp  audio.cpp  auxil.cpp  briefing.cpp  commandqueue.cpp  construct.cpp  creep.cpp  debug.cpp  dialogbin.cpp  diap.cpp  doodad.cpp  flingy.cpp  fog.cpp  fonts.cpp  gamemenu.cpp  gener.cpp  gr.cpp  hod.cpp  images.cpp  iscript.cpp  iscriptcmds.cpp  key.cpp  lists.cpp  load.cpp  loadlo.cpp  mage.cpp  man.cpp  maps.cpp  market.cpp  menu.cpp  messages.cpp  (+38 more)
src/audio/sdl/: audiolib.cpp
src/dos/: doscall.cpp  gr8dos.asm  grdos.cpp  handlers.cpp  keydos.cpp  mousedos.cpp
src/fb/: fbController.cpp
src/libs/grplib/src/: gr8.cpp  grp.cpp  palette.cpp  usegrp.cpp
src/libs/grplib/src/cpp/: font.cpp  grpcpp.cpp  grpdefns.h  grpsmpls.h
src/libs/mpqlib/huffman/: huffman.cpp  huffman.h
src/libs/mpqlib/pklib/: crc32.cpp  explode.cpp  implode.cpp  pklib.h
src/libs/mpqlib/src/: SCommon.cpp  SCompression.cpp  SFileCompactArchive.cpp  SFileCreateArchiveEx.cpp  SFileExtractFile.cpp  SFileFindFile.cpp  SFileOpenArchive.cpp  SFileOpenFileEx.cpp  SFileReadFile.cpp  SListFile.cpp  StormPortLinux.cpp  pthreadPort.cpp
src/libs/mpqlib/wave/: wave.cpp
src/network/: netwgame.cpp  network_dc.cpp  network_dedicated.cpp  network_general.cpp  network_modem.cpp  network_tcp.cpp  network_udp.cpp  netwplay.cpp
src/noaudio/: NOaudio.cpp
src/sdl/: SDLController.cpp  audiolowlevel.cpp  grsdl.cpp  mousesdl.cpp  sdlmouse.cpp
src/smacker/: smacker.cpp  smk_bitstream.cpp  smk_hufftree.cpp
src/sound.null/: audiolowlevel.cpp
src/sound.sdl/: audiolowlevel.cpp
src/video/fb/: Controller.cpp
src/video/sdl/: Controller.cpp
src/video/win/: Controller.cpp  linkerrors.txt
src/video/win/temp/: GR.C  GR.H  PRG.C  PRG.H
src/video/xlib/: Controller.cpp
src/xlib/: xlibController.cpp  xlibmouse.cpp
utils/STARCLONEMPQMAKER/: (listfile)  .gitignore  Makefile  Makefile.mpqlib  Makefile.stormlib  dompq  makelist  makempq.cpp  mpqextractall.cpp  mpqextractlistfile.cpp
utils/fnt2pcx/: .gitignore  Makefile  debug  font16.fnt  pcx2fnt.cpp
utils/fonts/: .gitignore  Makefile  debug  mkfont.cpp  mkfont.h
utils/maphelp/: Makefile  maphelp.cpp  maphelp.h
utils/mkfont/: .gitignore  Makefile  debug  mkfont.cpp  myfont.pcx
utils/mpq/: (listfile)  Makefile.mpqlib  Makefile.stormlib  makempq.cpp
utils/mylist.test/: 1  Makefile  testmylist.cpp
utils/smkview/: Makefile
utils/smkview/src/: smkview.cpp
utils/tbl/: Makefile  cheats.txt  maketbl.cpp  str_cmpgns.txt  strings.txt
utils/udp/: .gitignore  Makefile  mserver  receiver.cpp  sender.cpp
